feat: add filtro

--- a/aula-04/index.html
+++ b/aula-04/index.html
@@ -44,6 +44,10 @@
           <button class="button" type="submit">Cadastrar</button>
         </div>
       </form>
+
+      <ul id="total" class="list"></ul>
+
+      <ul id="list" class="list"></ul>
     </main>
   </body>
 </html>
